--- a/index.html
+++ b/index.html
@@ -20,44 +20,44 @@
     </div>
     <!------------------------ table of days----------------------->
     <div class="listJob">
-        <div  id="saturday">
-            <span>SAT</span>
-            <!-- <input type="checkbox">
-            <p>car</p>
-            <input type="checkbox">
-            <p>loptop</p>
-            <p>mobile</p>
-            <p>car</p>
-            <p>loptop</p>
-            <p>mobile</p> -->
+        <div  id="saturday" class="shadow">
+            <span class="fixed">SAT</span>
+            <hr class="bottomLine">
         </div>
 
-        <div id="sunday">
+        <div id="sunday" class="shadow">
             <span>SUN</span>
+            <hr class="bottomLine">
         </div>
 
-        <div id="monday">
+        <div id="monday" class="shadow mondayclass">
             <span>MON</span>
+            <hr class="bottomLine">
         </div>
 
-        <div id="tuesday">
+        <div id="tuesday" class="shadow">
             <span>TUE</span>
+            <hr class="bottomLine">
         </div>
 
-        <div id="wednesday">
+        <div id="wednesday" class="shadow">
             <span>WED</span>
+            <hr class="bottomLine">
         </div>
 
-        <div id="thursday">
+        <div id="thursday" class="shadow">
             <span>THU</span>
+            <hr class="bottomLine">
         </div>
 
-        <div id="friday">
+        <div id="friday" class="shadow">
             <span>FRI</span>
+            <hr class="bottomLine">
         </div>
 
-        <div class="result">
+        <div class="result shadow" >
             <span class="performanceText">PERFORMANCE :</span>
+           
             <section class="partA">
                 <button id="arzyabi">Assessment</button>
                 <span id="resultShow"></span>
