--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         </div>
     </div>
     <!------------------------ add new task----------------------->
-    <div class="addNewTask">
+    <div class="addNewTask shadow">
+        <p class="titleOfAddNewTask">ToDo List App</p>
         <input type="text" placeholder="Enter new Task" id="textInput">
         <!------------------------ select of  days----------------------->
         <select name="" id="selectDay" class="days">
