--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
         <div id="monday" class="shadow mondayclass">
             <span>MON</span>
             <hr class="bottomLine">
+            <p style="color: red;"> 1- df<input type="checkbox">
+                <button class="BtnDelete">delete</button>
+                <button class="BtnEdit">edit</button>
+                <button class="DoneEdit">&#10003;</button>
+            </p>
         </div>
 
         <div id="tuesday" class="shadow">
