--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     
-        <a onclick="AllTask()">ALL</a>
+        <a onclick="AllTask()" id="AllTask">ALL</a>
         <a onclick="ActiveTask()" id="ActiveLink">Active</a>
-        <a onclick="DoneTask()">Completed</a>
+        <a onclick="DoneTask()" id="CompletedTask">Completed</a>
       </div>
       
       <!-- Use any element to open the sidenav -->
